third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/leading-zero-sign-1.stderr
TOML parse error at line 1, column 25
  |
1 | leading-zero-sign-1 = -01
  |                         ^
expected newline, `#`
